--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ ol {
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
-    top: 40%;
+    top: 20%;
   }
   #index-banner .section {
     top: 10%;
@@ -41,6 +41,9 @@ ol {
   #login{
     width: 90%;
     height: 40%;
+  }
+  #index-bannerS{
+    min-height: 280px;
   }
 }
 
@@ -73,9 +76,11 @@ ol {
 }
 .parallax-container{
   height: 500px;
+  
 }
 #index-bannerS{
-  height: 150px;;
+  height: 150px;
+  min-height: 280px;
 }
 .dropdown-content li > a, .dropdown-content li > span { 
   color: #000000;
