--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ ol {
   #index-bannerS{
     min-height: 280px;
   }
+  #formQuery{
+    width: 90%;
+    height: 50%;
+  }
   
 }
 @media only screen and (min-width : 999px){
